<resources>
    <string name="app_name">VehiclesList</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="select_make">Select Make</string>
    <string name="select_model">Select Model</string>
    <string name="add_car_title">Add a new car</string>
    <string name="list_car_title">Your cars</string>
    <string name="add_car_button">Add car</string>
</resources>